<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="18dp"
            android:paddingTop="18dp"

            android:paddingRight="18dp"
            android:paddingBottom="21dp"
            android:text="@string/time_05"
            android:textColor="#FFF50B0B"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingTop="18dp"
            android:paddingRight="18dp"
            android:paddingBottom="21dp"
            android:text="@string/score_00"
            android:textColor="#FFF50B0B"
            android:textSize="25dp"

            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/number1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="left"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="254dp"
        android:paddingLeft="125dp"

        android:paddingTop="5dp"
        android:paddingRight="30dp"
        android:paddingBottom="05dp"
        android:text="@string/_34_45"
        android:textColor="#520707"
        android:textSize="55sp" />

    <TextView
        android:id="@+id/number2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/number1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="238dp"
        android:paddingLeft="141dp"

        android:paddingTop="5dp"
        android:paddingRight="159dp"
        android:paddingBottom="5dp"
        android:text="@string/_75"
        android:textColor="#520707"
        android:textSize="55sp" />

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="124dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"


        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="603dp"
        android:layout_marginEnd="-3dp"
        android:layout_marginRight="-3dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imagebutton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"

            android:layout_weight="1"

            android:background="#F50B0B"
            android:contentDescription="@string/done"
            android:onClick="sumit"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:src="@drawable/baseline_done_black_36dp" />

        <ImageButton
            android:id="@+id/imagebutton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#FFF50B0B"

            android:contentDescription="@string/close"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:src="@drawable/baseline_close_black_36dp" />

    </LinearLayout>


</RelativeLayout>